# azur-scan

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.claude/: launch.json
.github/workflows/: build-macos-installer.yml  build-windows-installer.yml
agent/: Makefile  README.md  pyproject.toml
agent/azurscan_agent/: __main__.py  cli.py  collectors.py  config.py  logging_setup.py  machine.py  runtime.py  secrets_store.py  transport.py
agent/installer/macos/: README.md  build.sh  com.azurscan.agent.plist  distribution.xml  postinstall  preinstall  preuninstall
agent/installer/macos/Resources/: conclusion.html  welcome.html
agent/installer/windows/: License.rtf  README.md  azur-scan.wxs  azurscan-service.xml  build.ps1  install-azurscan.cmd  install.ps1  installer.spec  installer_main.py  package.ps1  uninstall.ps1
apps/accounts/: admin.py  models.py  tasks.py
apps/accounts/migrations/: 0001_initial.py
apps/agents/: admin.py  apps.py  auth.py  models.py  permissions.py  services.py  tasks.py  tokens.py
apps/api/: apps.py  throttles.py
apps/assets/: admin.py  apps.py  filters.py  models.py  selectors.py  services.py
apps/core/: admin.py  apps.py  audit.py  exceptions.py  models.py  permissions.py  signals.py  unfold.py  views.py
apps/scanning/: admin.py  apps.py  models.py  schemas.py  services.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docker/: web.Dockerfile
requirements/: base.txt  dev.txt
templates/: landing.html
(+15 files in other folders)
