[project]
name = "azurscan-backend"
version = "0.1.0"
description = "Azur-Scan backend — IT asset inventory."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "migrations", "staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
